# hyper-agent-python-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/custom_adapter/: plugin.py
examples/hello_plugin/: README.md  plugin.py
src/hyper_agent_sdk/: __init__.py  plugin_base.py  types.py
src/hyper_agent_sdk/adapters/: __init__.py  base.py  deepseek.py  glm.py
src/hyper_agent_sdk/drivers/: __init__.py  base.py  chromadb.py
src/hyper_agent_sdk/tools/: __init__.py  base.py  builtins.py
src/hyper_agent_sdk/workflows/: __init__.py  template.py
